# gwas-bin-tests

pkg/GWASBinTests/: DESCRIPTION  Makefile  NAMESPACE  README  cleanup  configure  configure.ac  extdata
pkg/GWASBinTests/R/: GWASBinTests-package.R  bins.R  check.R  concepts.R  data.R  genotype_error_models.R  genotypes.R  merge.R  parameters.R  process.R  read.R  save.R  simpleAllelicSumScores.R  simpleDivariate.R  simpleGenotypicSumScores.R  simpleUnivariate.R  synopsis.R  zzz.R
pkg/GWASBinTests/data/: ms1.rda
pkg/GWASBinTests/man/: .compareAllelicSumScores.Rd  .compareAllelicSumScoresPvalues.Rd  .compareDivariateLikelihood.Rd  .compareDivariateLikelihoodPvalues.Rd  .compareGenotypicSumScores.Rd  .compareGenotypicSumScoresPvalues.Rd  .compareUnivariateLikelihood.Rd  .compareUnivariateLikelihoodPvalues.Rd  .onLoad.Rd  0_Synopsis.Rd  GWASBinTests-package.Rd  asGws.Rd  concept#allelic.sum.score.Rd  concept#bin.Rd  concept#divariate.likelihood.Rd  concept#genotype.error.model.Rd  concept#genotypic.sum.score.Rd  concept#likelihood.ratio.Rd  concept#naive.likelihood.Rd  concept#regularization.of.table.estimates.Rd  convertChromosomeNames.Rd  convertGenotypes.Rd  data#ms1.Rd  data#ms1_bins.Rd  data#ms1_gws.Rd  data#plink_small.Rd  fetchGenotypes.Rd  fetchGenotypesAsList.Rd  gwsForBin.Rd  makeBinsForSnps.Rd  mergeGws.Rd  missingRateFromGenotypes.Rd  parameters.Rd  processFiles.Rd  processGws.Rd  processTable.Rd  readBins.Rd  readGws.Rd  readPlinkTransposedData.Rd  saveGws.Rd  (+12 more)
pkg/GWASBinTests/old/: pvalues.R  runit.pvalues.R  univariate.R
pkg/GWASBinTests/src/: Makevars  Makevars.in  Makevars.win  README  r_wrapper.cpp
pkg/RcppProgress/: DESCRIPTION  err  out
pkg/RcppProgress/R/: inline.R  tests.R  zzz.R
pkg/RcppProgress/man/: RcppProgress-package.Rd
pkg/RcppProgress/src/: tests.cpp
pkg/RcppProgress/tests/: run_runit.R
pkg/RcppProgressExample/: DESCRIPTION
pkg/RcppProgressExample/man/: RcppProgressExample-package.Rd
pkg/RcppProgressExample/src/: Makevars  Makevars.win  example.cpp
pkg/RcppRandomSFMT/: DESCRIPTION  NAMESPACE  README
pkg/RcppRandomSFMT/R/: inline.R  zzz.R
pkg/RcppRandomSFMT/man/: RcppRandomSFMT-package.Rd
pkg/RcppSFMT/: DESCRIPTION  NAMESPACE  README.TXT  config.status  configure  configure.ac
pkg/RcppSFMT/R/: functions.R  init.R  inline.R  inline.R.in  interface.R  simulateSFMT11213.R
pkg/RcppSFMT/inst/doc/: README.txt
pkg/RcppSFMT/inst/include/: SFMT.hpp  config.h  config.h.in
pkg/RcppSFMT/inst/include/SFMT-src/: .cproject
pkg/RcppSFMT/inst/include/winconfig/: config.h
pkg/RcppSFMT/man/: RcppSFMT-package.Rd  SFMT.Rd  rngSFMT2-package.Rd
pkg/RcppSFMT/src/: Makevars.in  Makevars.win  SFMT.hpp  config.h.in  interface.cpp
pkg/RcppSFMT/src/old/: RNG.cpp.t  generate_sfmt_sources.pl
pkg/RcppSFMT/tests/: checkOutput.R  test_R_module.R
pkg/RcppSFMTExample/: .project  DESCRIPTION  NAMESPACE
pkg/RcppSFMTExample/R/: functions.R  init.R
pkg/RcppSFMTExample/man/: testInterleaving.Rd  testPi.Rd  testSums.Rd  tryInterleaving.Rd  trySetRngParams.Rd  trySum.Rd
pkg/RcppSFMTExample/src/: Makevars  pi_rng_threaded.c  (+4 more)
pkg/RcppSFMTHeaderExample/: DESCRIPTION  NAMESPACE
pkg/rngBenchmarks/: DESCRIPTION  Makefile  NAMESPACE
pkg/rngSFMT2/: DESCRIPTION  Makefile  config.status  configure  configure.ac  configure.win  configure_old.ac  test  test.ac
pkg/rngSFMT2/R/: functions.R  simulateSFMT19937.R
pkg/rngSFMT2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
pkg/rngSFMT2/m4/: ax_ext2.m4
pkg/rngSFMT2/man/: formatOutput.Rd  generSFMT.Rd  testSFMT.Rd
pkg/rngSFMT2/src/: Makevars  Makevars.in  Makevars_old.in  RNG.cpp.t  RNG.hpp.t  SFMT.hpp  SFMT_ALTIVEC_11213.cpp  SFMT_ALTIVEC_11213.hpp  SFMT_ALTIVEC_1279.cpp  SFMT_ALTIVEC_1279.hpp  SFMT_ALTIVEC_132049.cpp  SFMT_ALTIVEC_132049.hpp  SFMT_ALTIVEC_19937.cpp  SFMT_ALTIVEC_19937.hpp  SFMT_ALTIVEC_216091.cpp  SFMT_ALTIVEC_216091.hpp  SFMT_ALTIVEC_2281.cpp  SFMT_ALTIVEC_2281.hpp  SFMT_ALTIVEC_4253.cpp  SFMT_ALTIVEC_4253.hpp  SFMT_ALTIVEC_44497.cpp  SFMT_ALTIVEC_44497.hpp  SFMT_ALTIVEC_607.cpp  SFMT_ALTIVEC_607.hpp  SFMT_ALTIVEC_86243.cpp  SFMT_ALTIVEC_86243.hpp  SFMT_NORMAL_11213.cpp  SFMT_NORMAL_11213.hpp  SFMT_NORMAL_1279.cpp  SFMT_NORMAL_1279.hpp  SFMT_NORMAL_132049.cpp  SFMT_NORMAL_132049.hpp  SFMT_NORMAL_19937.cpp  SFMT_NORMAL_19937.hpp  SFMT_NORMAL_216091.cpp  SFMT_NORMAL_216091.hpp  SFMT_NORMAL_2281.cpp  SFMT_NORMAL_2281.hpp  SFMT_NORMAL_4253.cpp  SFMT_NORMAL_4253.hpp  (+33 more)
pkg/rngSFMT2/src/SFMT-src/: .project
pkg/rngSFMT2/src/auto/: Sfmt_11213_ALTIVEC.hpp  Sfmt_11213_NORMAL.hpp  Sfmt_11213_SSE2.hpp  Sfmt_1279_ALTIVEC.hpp  Sfmt_1279_NORMAL.hpp  Sfmt_1279_SSE2.hpp  Sfmt_132049_ALTIVEC.hpp  Sfmt_132049_NORMAL.hpp  Sfmt_132049_SSE2.hpp  Sfmt_19937_ALTIVEC.hpp  Sfmt_19937_NORMAL.hpp  Sfmt_19937_SSE2.hpp  Sfmt_216091_ALTIVEC.hpp  Sfmt_216091_NORMAL.hpp  Sfmt_216091_SSE2.hpp  Sfmt_2281_ALTIVEC.hpp  Sfmt_2281_NORMAL.hpp  Sfmt_2281_SSE2.hpp  Sfmt_4253_ALTIVEC.hpp  Sfmt_4253_NORMAL.hpp  Sfmt_4253_SSE2.hpp  Sfmt_44497_ALTIVEC.hpp  Sfmt_44497_NORMAL.hpp  Sfmt_44497_SSE2.hpp  Sfmt_607_ALTIVEC.hpp  Sfmt_607_NORMAL.hpp  Sfmt_607_SSE2.hpp  Sfmt_86243_ALTIVEC.hpp  Sfmt_86243_NORMAL.hpp  Sfmt_86243_SSE2.hpp  Sfmt_include_all.hpp
(+113 files in other folders)
